--- a/css.css
+++ b/css.css
@@ -30,12 +30,7 @@
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
-*,
-*::before,
-*::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
+
 
 html {
   font-family: sans-serif;
@@ -45,7 +40,7 @@ html {
   -ms-overflow-style: scrollbar;
   -webkit-tap-highlight-color: transparent;
 }
-s
+
 div.spacer
 {
     font-size: 0;
@@ -64,5 +59,11 @@ h2.toptext
 {
 
 font-size: 40px;
+
+}
+p.filler
+{
+
+font-size: 30px;
 
 }
